--- a/logplayer/package.json
+++ b/logplayer/package.json
@@ -9,16 +9,21 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "reflect-metadata": "^0.1.13",
     "three": "^0.150.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss-px-to-viewport": "^1.1.1"
   },
