--- a/logplayer/package.json
+++ b/logplayer/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "reflect-metadata": "^0.1.13",
     "three": "^0.150.1",
