--- a/logplayer/package.json
+++ b/logplayer/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
+    "element-plus": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "three": "^0.150.1",
     "vue": "^3.2.13"
