--- a/logplayer/package.json
+++ b/logplayer/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "three": "^0.150.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
