--- a/log-player-server/src/main/resources/application.properties
+++ b/log-player-server/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.address=localhost
+server.port=8080
+server.servlet.context-path=/log
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.50.10.14:3306/m_o_rdc?autoReconnect=true&useSSL=false&characterEncoding=utf-8&serverTimezone=UTC&allowMultiQueries=true
+spring.datasource.data-username=root
+spring.datasource.data-password=root
 
+file.base-local-url=D:/a11406/project2/bishe/log/
+file.base-net-url=http://chaosscripting.net/files/replays/2DSim/
