--- a/log-player-server/src/main/resources/application.properties
+++ b/log-player-server/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/log_player?serverTimezone=UTC&
 spring.datasource.username=root
 spring.datasource.password=sakura
 
+#file.base-local-url=E:/wangxin/file/bishe/file
+file.base-local-url=D:/testfile
 file.base-local-url-root=/log
-file.base-local-url=E:/wangxin/file/bishe/file
 file.base-net-url=http://chaosscripting.net
 file.base-net-url-root=/files/replays/2DSim
