--- a/log-player-server/src/main/resources/application.properties
+++ b/log-player-server/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.address=localhost
 server.port=8080
 server.servlet.context-path=/log-player
+server.tomcat.connection-timeout= 60000
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/log_player?serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=sakura
+spring.servlet.multipart.max-file-size=20MB
 
 #file.base-local-url=E:/wangxin/file/bishe/file
 file.base-local-url=D:/testfile
