--- a/logplayer/package.json
+++ b/logplayer/package.json
@@ -11,9 +11,11 @@
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.2",
+    "jszip": "^3.10.1",
     "reflect-metadata": "^0.1.13",
     "three": "^0.150.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
