--- a/log-player-server/src/main/resources/application.properties
+++ b/log-player-server/src/main/resources/application.properties
@@ -2,6 +2,9 @@ server.address=localhost
 server.port=8081
 server.servlet.context-path=/log-player
 server.tomcat.connection-timeout= 60000
+#server.compression.enabled=false
+#server.compression.min-response-size=204800000
+#server.compression.excluded-user-agents=.*Chrome/113.0.5672.93.*|.*Safari/605.1.15.*
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/log_player?serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
@@ -9,7 +12,7 @@ spring.datasource.password=sakura
 spring.servlet.multipart.max-file-size=20MB
 
 #file.base-local-url=E:/wangxin/file/bishe/file
-file.base-local-url=D:/testfile
+file.base-local-url=E:/testfile
 file.base-local-url-root=/log
 file.base-net-url=http://chaosscripting.net
 file.base-net-url-root=/files/replays/2DSim
